[package]
name = "s3-signer"
version = "0.1.1"
authors = [
  "Marc-Antoine Arnaud <marc-antoine.arnaud@luminvent.com>",
  "Valentin NOEL <valentin.noel@luminvent.com>",
]
edition = "2018"
readme = "README.md"
description = "A simple S3 signer in Rust"
repository = "https://github.com/media-io/s3-signer"
license = "MIT"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
async-std = { version = "1.7.0", features = ["attributes"] }
clap = { version = "3.2.22", features = ["derive", "env"] }
log = "0.4"
rusoto_core = "0.48.0"
rusoto_credential = "0.48.0"
rusoto_signature = "0.48.0"
rusoto_s3 = "0.48.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
simple_logger = "2.3.0"
tokio = "1.5.0"
utoipa = "2"
utoipa-swagger-ui = "2"
warp = "0.3.3"

[build-dependencies]
built = "0.5"
