[package]
name = "s3-signer"
version = "0.2.2"
authors = [
  "Marc-Antoine Arnaud <marc-antoine.arnaud@luminvent.com>",
  "Valentin NOEL <valentin.noel@luminvent.com>",
]
edition = "2018"
readme = "README.md"
description = "A simple S3 signer in Rust"
repository = "https://github.com/media-io/s3-signer"
license = "MIT"

[features]
server = [
  "async-std",
  "clap",
  "log",
  "rusoto_core",
  "rusoto_credential",
  "rusoto_signature",
  "rusoto_s3",
  "serde_json",
  "simple_logger",
  "tokio",
  "utoipa-swagger-ui",
  "warp",
]

[[bin]]
name = "s3-signer"
required-features = ["server"]

[dependencies]
async-std = { version = "1.7.0", features = ["attributes"], optional = true }
clap = { version = "3.2.22", features = ["derive", "env"], optional = true }
log = { version = "0.4", optional = true }
rusoto_core = { version = "0.48.0", optional = true }
rusoto_credential = { version = "0.48.0", optional = true }
rusoto_signature = { version = "0.48.0", optional = true }
rusoto_s3 = { version = "0.48.0", optional = true }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0", optional = true }
simple_logger = { version = "2.3.0", optional = true }
tokio = { version = "1.5.0", optional = true }
utoipa = "2"
utoipa-swagger-ui = { version = "2", optional = true }
warp = { version = "0.3.3", optional = true }

[build-dependencies]
built = "0.5"
